--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 transmission-remote-gtk (1.1.1-1) unstable; urgency=low
 
-  * Initial release (Closes: #630789)
+  * Initial release (Closes: #630789).  Upstream ships a debian
+    directory; I’ve replaced it with my own.
 
  -- Benjamin Barenblat <bbaren@mit.edu>  Sun, 14 Jul 2013 17:18:53 -0700
