--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ transmission-remote-gtk (1.1.1-2) unstable; urgency=low
   * Import upstream patch to have 'make test' work again.
   * Import upstream patch to add keywords to .desktop file (fixes a
     Lintian warning).
+  * Use base-files’ copy of the GPL in the about box (closes: #791553).
 
- -- Benjamin Barenblat <bbaren@mit.edu>  Tue, 25 Nov 2014 17:58:21 -0500
+ -- Benjamin Barenblat <bbaren@mit.edu>  Sun, 26 Jul 2015 18:11:58 -0400
 
 transmission-remote-gtk (1.1.1-1) unstable; urgency=low
 
