--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-transmission-remote-gtk (1.1.1-2) sid; urgency=low
+transmission-remote-gtk (1.1.1-2) experimental; urgency=low
 
   * Update Standards-Version.
   * Update Vcs-* URLs.
@@ -8,7 +8,7 @@ transmission-remote-gtk (1.1.1-2) sid; urgency=low
     Lintian warning).
   * Use base-files’ copy of the GPL in the about box (closes: #791553).
 
- -- Benjamin Barenblat <bbaren@mit.edu>  Sun, 26 Jul 2015 18:11:58 -0400
+ -- Benjamin Barenblat <bbaren@mit.edu>  Fri, 28 Aug 2015 14:57:12 -0400
 
 transmission-remote-gtk (1.1.1-1) unstable; urgency=low
 
