--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+transmission-remote-gtk (1.1.1-3) unstable; urgency=high
+
+  * Fix possible GPL violation by removing libappindicator support
+    (closes: #825859, #810103).
+
+ -- Benjamin Barenblat <bbaren@mit.edu>  Mon, 30 May 2016 17:03:25 -0400
+
 transmission-remote-gtk (1.1.1-2) unstable; urgency=low
 
   * Update Standards-Version.
