--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+transmission-remote-gtk (1.3.1-1) unstable; urgency=medium
+
+  * New upstream release (closes: #827154, #839181).
+
+ -- Benjamin Barenblat <bbaren@mit.edu>  Sun, 23 Oct 2016 13:15:58 -0400
+
 transmission-remote-gtk (1.1.1-3) unstable; urgency=high
 
   * Fix possible GPL violation by removing libappindicator support
