--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+transmission-remote-gtk (1.3.1-2) unstable; urgency=medium
+
+  * Correct Vcs-* URLs.
+
+ -- Benjamin Barenblat <bbaren@mit.edu>  Sat, 29 Oct 2016 16:35:46 -0400
+
 transmission-remote-gtk (1.3.1-1) unstable; urgency=medium
 
   * New upstream release (closes: #827154, #839181).
