--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+transmission-remote-gtk (1.4.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Benjamin Barenblat <bbaren@debian.org>  Fri, 23 Nov 2018 12:28:51 -0500
+
 transmission-remote-gtk (1.3.1-2) unstable; urgency=medium
 
   * Correct Vcs-* URLs.
