--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-transmission-remote-gtk (1.4.1-2) UNRELEASED; urgency=medium
+transmission-remote-gtk (1.4.1-2) unstable; urgency=medium
 
   * Delete unused build dependency on libunique-dev (closes: #947516).
 
- -- Benjamin Barenblat <bbaren@debian.org>  Sat, 28 Dec 2019 09:58:22 -0500
+ -- Benjamin Barenblat <bbaren@debian.org>  Sat, 28 Dec 2019 11:01:52 -0500
 
 transmission-remote-gtk (1.4.1-1) unstable; urgency=medium
 
