--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+transmission-remote-gtk (1.4.1-3) UNRELEASED; urgency=medium
+
+  * Fix building with GCC 10 (closes: #957883).
+
+ -- Benjamin Barenblat <bbaren@debian.org>  Mon, 20 Apr 2020 19:05:06 -0400
+
 transmission-remote-gtk (1.4.1-2) unstable; urgency=medium
 
   * Delete unused build dependency on libunique-dev (closes: #947516).
