--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+transmission-remote-gtk (1.4.1-4) unstable; urgency=medium
+
+  * Add torrent hash information to torrent details pane (closes:
+    #961767).
+
+ -- Benjamin Barenblat <bbaren@debian.org>  Thu, 06 Aug 2020 16:57:18 -0400
+
 transmission-remote-gtk (1.4.1-3) unstable; urgency=medium
 
   * Fix building with GCC 10 (closes: #957883).
